--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,47 @@
-django>=3.0,<3.1
-django-bootstrap4>=1.1,<1.2
-rollbar>=0.14,<0.15
-flake8>=3.7,<3.8
-psycopg2==2.7.5 # necessary for correct installation of django-heroku
-django-heroku>=0.3,<0.4
-gunicorn>=20.0,<20.1
+asgiref==3.2.7
+attrs==19.3.0
+beautifulsoup4==4.9.0
+CacheControl==0.12.6
+cachy==0.3.0
+certifi==2020.4.5.1
+chardet==3.0.4
+cleo==0.7.6
+clikit==0.4.3
+dj-database-url==0.5.0
+Django==3.0.5
+django-bootstrap4==1.1.1
+django-heroku==0.3.1
+entrypoints==0.3
+flake8==3.7.9
+gunicorn==20.0.4
+html5lib==1.0.1
+idna==2.9
+jsonschema==3.2.0
+keyring==20.0.1
+lockfile==0.12.2
+mccabe==0.6.1
+msgpack==1.0.0
+pastel==0.2.0
+pexpect==4.8.0
+pkginfo==1.5.0.1
+poetry==1.0.5
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
+ptyprocess==0.6.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+pylev==1.3.0
+pyparsing==2.4.7
+pyrsistent==0.14.11
+pytz==2019.3
+requests==2.23.0
+requests-toolbelt==0.8.0
+rollbar==0.15.0
+shellingham==1.3.2
+six==1.14.0
+soupsieve==1.9.5
+sqlparse==0.3.1
+tomlkit==0.5.11
+urllib3==1.25.8
+webencodings==0.5.1
+whitenoise==5.0.1
