--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ django-bootstrap4 = "^1.1.1"
 rollbar = "^0.15.0"
 psycopg2-binary = "^2.8.5"
 django-heroku = "^0.3.1"
-django-dotenv = "^1.4.2"
+python-dotenv = "^0.12.0"
 
 [tool.poetry.dev-dependencies]
 gunicorn = "^20.0.4"
