--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ clikit==0.4.3
 dj-database-url==0.5.0
 Django==3.0.5
 django-bootstrap4==1.1.1
+django-dotenv==1.4.2
 django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.9
