--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,6 @@ clikit==0.4.3
 dj-database-url==0.5.0
 Django==3.0.5
 django-bootstrap4==1.1.1
-django-dotenv==1.4.2
 django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.9
@@ -34,6 +33,7 @@ pyflakes==2.1.1
 pylev==1.3.0
 pyparsing==2.4.7
 pyrsistent==0.14.11
+python-dotenv==0.12.0
 pytz==2019.3
 requests==2.23.0
 requests-toolbelt==0.8.0
