--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ rollbar = "^0.15.0"
 psycopg2-binary = "^2.8.5"
 django-heroku = "^0.3.1"
 python-dotenv = "^0.12.0"
+coverage = "^5.0.4"
 
 [tool.poetry.dev-dependencies]
 gunicorn = "^20.0.4"
