--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 cleo==0.7.6
 clikit==0.4.3
+coverage==5.0.4
 dj-database-url==0.5.0
 Django==3.0.5
 django-bootstrap4==1.1.1
