--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ psycopg2-binary = "^2.8.5"
 django-heroku = "^0.3.1"
 python-dotenv = "^0.12.0"
 coverage = "^5.0.4"
+dj-database-url = "^0.5.0"
 
 [tool.poetry.dev-dependencies]
 gunicorn = "^20.0.4"
