--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ django-heroku = "^0.3.1"
 python-dotenv = "^0.12.0"
 coverage = "^5.0.4"
 dj-database-url = "^0.5.0"
+django-filter = "^2.2.0"
 
 [tool.poetry.dev-dependencies]
 gunicorn = "^20.0.4"
