--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ coverage==5.0.4
 dj-database-url==0.5.0
 Django==3.0.5
 django-bootstrap4==1.1.1
+django-filter==2.2.0
 django-heroku==0.3.1
 entrypoints==0.3
 flake8==3.7.9
